<resources>
    <string name="language">language</string>
    <string name="app_state_recode_title">Recode</string>
    <string name="app_violation_title">Violation Check</string>
    <string name="reg_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ#@</string>
    <string name="number_digits">.0123456789</string>
    <string name="app_name">Car Pod Digital Car Key</string>
    <string name="flag_info">Found</string>
    <string name="flag_me">My</string>
    <string name="wallet">wallet</string>
    <string name="share">share</string>
    <string name="set">set</string>
    <string name="contact_us">contact us</string>
    <string name="about">about</string>
    <string name="nickname">nickname</string>
    <string name="mobile_phone_no">phone number</string>
    <string name="currently_there_is_no_available_vehicles">currently there is no available vehicles</string>
    <string name="please_wait_a_moment_data_is_not_loaded">please wait a moment data is not oaded!</string>
    <string name="carmanager">carmanager</string>
    <string name="new_vehicle">new vehicle</string>
    <string name="license_plate_number">license plate number</string>
    <string name="vehicle_brand">vehicle brand</string>
    <string name="please_enter_the_license_plate_number">please enter the license plate number</string>
    <string name="vehicle_system">vehicle system ：</string>
    <string name="vehicle_system_no_space">vehicle system</string>
    <string name="vehicle_type">vehicle type ：</string>
    <string name="vehicle_type_no_space">vehicle type</string>
    <string name="vin_code">vin code ：</string>
    <string name="please_enter_vin_code_last_six_number">please enter vin code last six number</string>
    <string name="engine_number">engine number ：</string>
    <string name="please_enter_engine_last_six_number">please enter engine last six number</string>
    <string name="purchase_date">purchase date ：</string>
    <string name="date_of_insurance">date of insurance ：</string>
    <string name="year_of_careful_date">year of careful date ：</string>
    <string name="maintenance_date">maintenance date ：</string>
    <string name="terminal_number">terminal number ：</string>
    <string name="can_choose">*can choose*</string>
    <string name="see_details">see details</string>
    <string name="delete">delete</string>
    <string name="please_enter_a_password">please enter a password:</string>
    <string name="network_bad">network bad!</string>
    <string name="please_select_a_vehicle_series">please select a vehicle series</string>
    <string name="please_first_select_the_vehicle_brands">please first select the vehicle brands!</string>
    <string name="please_first_select_a_vehicle_series">please first select a vehicle series!</string>
    <string name="modify_the_vehicle">modify the vehicle</string>
    <string name="please_select_a_vehicle_model">please select a vehicle model</string>
    <string name="add_a_new_vehicle">add a new vehicle (</string>
    <string name="success">) success!</string>
    <string name="online_payment">online payment</string>
    <string name="not_choose_the_vehicle_license_plate_number">not choose the vehicle license plate number：</string>
    <string name="as_of_the_date_of_service">as of the date of service：</string>
    <string name="three_handre_dyuan">330.00元</string>
    <string name="three_year">three year</string>
    <string name="please_select_a_vehicle">please select a vehicle</string>
    <string name="method_of_payment">method of payment</string>
    <string name="no_available_vehicles">no available vehicles!</string>
    <string name="alipay_pay_success">alipay pay success!</string>
    <string name="you_do_not_install_pay_treasure_or_cancelled_payment">you do not install pay treasure or cancelled payment!</string>
    <string name="please_install_wechat_software">please install wechat software!</string>
    <string name="yuan">yuan</string>
    <string name="you_on_the_current_activation_vehicle_do_not_have_to_pay">You currently have no activated vehicles! No payment required!</string>
    <string name="sharing_software">sharing software：</string>
    <string name="sharing_website">sharing website：</string>
    <string name="share_a_circle_of_friends">share a circle of friends</string>
    <string name="share_wechat">share wechat</string>
    <string name="security">security</string>
    <string name="message_switch">message switch</string>
    <string name="privacy_switch">privacy switch</string>
    <string name="prompt_box_switch">prompt box switch</string>
    <string name="sound_and_vibration">sound and vibration</string>
    <string name="gestures_password">gestures password</string>
    <string name="change_phone_number">change phone number</string>
    <string name="binding_email">binding email</string>
    <string name="scurity_issues">scurity issues</string>
    <string name="click_settings">click settings</string>
    <string name="click_modify">click modify</string>
    <string name="modify_password">modify password</string>
    <string name="not_login">not login</string>
    <string name="unbounded">unbounded</string>
    <string name="reset_password">reset password</string>
    <string name="please_choose_the_following_method_to_reset_your_password">please choose the following method to reset your password</string>
    <string name="tip">tip ： </string>
    <string name="the_tip">tip</string>
    <string name="please_choose_the_following_method_to_reset_your_phone_number">please choose the following method to reset your phone number</string>
    <string name="please_choose_the_following_method_to_reset_your_aderess">please choose the following method to reset your aderess</string>
    <string name="please_choose_the_following_method_to_reset_your_security_issues">please choose the following method to reset your security issues</string>
    <string name="mobile_phone_number_find_back">mobile phone number find back</string>
    <string name="modify_email">modify email</string>
    <string name="modify_phone_number">modify phone number</string>
    <string name="modify_security_issues">modify security issues</string>
    <string name="the_new_email">the new email</string>
    <string name="please_enter_a_new_email">please enter a new email</string>
    <string name="please_enter_the_corresponding_answer">please enter the corresponding answer</string>
    <string name="validation">validation</string>
    <string name="email_back">email back</string>
    <string name="mobile_phone_number_to_reset_the_password">phone number reset password</string>
    <string name="mobile_phone_number_to_reset_the_phone_number">phone number reset phone number</string>
    <string name="reset_the_phone_number">reset the phone number</string>
    <string name="please_enter_phone_number">please enter phone number</string>
    <string name="please_enter_new_phone_number">please enter new phone number</string>
    <string name="please_enter_erification_code">please enter verfy code</string>
    <string name="please_enter_short_code">enter code</string>
    <string name="mobile_phone_number">mobile phone number</string>
    <string name="verification_code">verification code</string>
    <string name="not_receive_verification_code">not receive verification code?</string>
    <string name="to_obtain">obtain</string>
    <string name="using_voice_verification">please using voice verification</string>
    <string name="voice_verification">voice verification</string>
    <string name="check_the_solution">can not receeve verfycode,check the solution</string>
    <string name="personality_is_dressed_up">personality is dressed up</string>
    <string name="license_plate_number_simbol">license plate number simbol: </string>
    <string name="details">details</string>
    <string name="page_find_nfc">NFC Smart Card</string>
    <string name="page_find_yaokong">Remote Control</string>
    <string name="page_find_yaoyiyao">Shake it</string>
    <string name="page_find_blue_in">Bluetooth Senseless Entry</string>
    <string name="page_find_touch_in">Touch Keyless Entry</string>
    <string name="page_find_zhendong_alrm">Vibration alarm</string>
    <string name="page_find_app_jieche">APP Car Borrowing</string>
    <string name="page_find_status_record">Status Record</string>
    <string name="page_find_factiry">Engineering Settings</string>
    <string name="page_set_backper_title">Background Run  Settings</string>
    <string name="page_set_info_one">To avoid system backend restrictions blocking the operation of Kushida digital car keys or causing Bluetooth connection interruption, it is recommended to set the following permissions.</string>
    <string name="page_set_hulie_title">Ignore battery optimization</string>
    <string name="page_set_hulie_info">Add BOSSCAYKEY to the battery optimization whitelist to ensure that background activities such as Bluetooth connectivity are not affected</string>
    <string name="page_set_back_run_title">Background Run Settings</string>
    <string name="page_set_back_run_info">Enabling it can ensure to some extent that BOSSCAYKEY continues to run in the background</string>
    <string name="page_set_batter_title">Power saving mode settings</string>
    <string name="page_set_batter_info">Allow BOSSCAYKEY to continue running in the background in power-saving mode</string>
    <string name="page_project_lock_up_tip">The function of locking and window raising depends on the model and is valid only when the model supports this function</string>
    <string name="page_project_lock_up">Lock the car window</string>
    <string name="page_project_up_delay_time">Lift window interval time</string>
    <string name="page_project_laba">Speaker volume</string>
    <string name="page_project_open_truck_tip">Open the trunk mode: double click when closing, long press when opening</string>
    <string name="page_project_up_time">Rise time window</string>
    <string name="page_project_tiqian">Advance time</string>
    <string name="page_project_huibiqi_control_way">Circumventer control mode</string>
    <string name="page_project_lock_chufa">Lock trigger mode</string>
    <string name="page_project_unlock_chufa">Unlock trigger mode</string>
    <string name="page_project_huibiqi_control">Circumvention control</string>
    <string name="page_project_factory">factory data reset</string>
    <string name="page_project_huibiqi_duan_time">Delayed power outage time</string>
    <string name="page_project_huibiqi_control_time">Short press time of buttons</string>
    <string name="page_pro_start_setting_txt">Remote start unlock setting</string>
    <string name="page_pro_lock_down_tip">After opening, the vehicle will automatically lock when the speed exceeds 20km/h, and automatically unlock when the engine is turned off. If this function is not required or if the original vehicle has this function, it does not need to be opened.</string>
    <string name="page_pro_lock_down_title">Driving lock</string>
    <string name="page_pro_open_truck_title">Opening the trunk mode</string>
    <string name="page_pro_find_way">Vehicle searching mode</string>
    <string name="page_pro_find_way_jiange_time">Search interval</string>
    <string name="page_apply_set">Project Settings</string>
    <string name="page_car_detail_last_six">Frame Number (last 6 digits)：</string>
    <string name="page_car_detail_fadongji_last_six">Engine code (last 6 digits) :</string>
    <string name="page_car_detail_fangqi">Give up authorization</string>
    <string name="page_car_detail_baoxiuqi">Product warranty period</string>
    <string name="page_car_detail_jihuoriqi">The activation date</string>
    <string name="page_car_detail_baoxiuzhong">In the warranty</string>
    <string name="modify">modify</string>
    <string name="page_wechat_your_car">Your car</string>
    <string name="page_car_detail_brand">brand</string>
</resources>