<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidme="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        androidme:text="@string/page_apply_set" />
    <view.find.ProItemTop
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp" />
    <view.find.ProItem
        android:id="@+id/lock_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        androidme:bottomTxt="@string/page_pro_lock_down_tip"
        androidme:topText="@string/page_pro_lock_down_title"
        androidme:rightres="@drawable/car_set_on"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <view.find.ProItem
                android:id="@+id/lock_up_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt="@string/page_project_lock_up_tip"
                androidme:topText="@string/page_project_lock_up"
                androidme:rightres="@drawable/car_set_on"
                android:layout_marginTop="5dp"/>
            <view.find.ProItem
                android:id="@+id/up_window_delay_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_up_delay_time"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/trumpet_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_laba"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/open_trunk_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt="@string/page_project_open_truck_tip"
                androidme:topText="@string/page_pro_open_truck_title"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/item_upwindow_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_up_time"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/item_evasive_pass_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_tiqian"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/item_evasive_close_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_huibiqi_duan_time"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/item_evasive_control_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_huibiqi_control_time"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/item_evasive_control_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_huibiqi_control_way"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/lock_trigger_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_lock_chufa"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/unlock_trigger_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_unlock_chufa"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/mini_evasive_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_huibiqi_control"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>
            <view.find.ProItem
                android:id="@+id/lock_unlock_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_pro_start_setting_txt"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                />
            <view.find.ProItem
                android:id="@+id/findcar_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_pro_find_way"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                />
            <view.find.ProItem
                android:id="@+id/findcar_jiange_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_pro_find_way_jiange_time"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                />


            <view.find.ProItem
                android:id="@+id/recover_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                androidme:bottomTxt=""
                androidme:topText="@string/page_project_factory"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/down_line"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
