<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:androidMe="http://schemas.android.com/apk/res-auto"
    >
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#FAFAFA"
        />
    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        androidMe:text="@string/page_set_backper_title"
        />
    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/page_set_info_one"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="14dp"
        android:gravity="left|center_vertical"
        />
    <view.view4me.ClipPermisonSetItem
        android:id="@+id/ignore_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        app:layout_constraintLeft_toLeftOf="parent"
        androidMe:topText="@string/page_set_hulie_title"
        androidMe:bottomTxt="@string/page_set_hulie_info"
        androidMe:splitLine="true"/>
    <view.view4me.ClipPermisonSetItem
        android:id="@+id/back_run_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ignore_battery"
        app:layout_constraintLeft_toLeftOf="parent"
        androidMe:topText="@string/page_set_back_run_title"
        androidMe:bottomTxt="@string/page_set_back_run_info"
        androidMe:splitLine="true"/>
    <view.view4me.ClipPermisonSetItem
        android:id="@+id/battry_mode_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/back_run_set"
        app:layout_constraintLeft_toLeftOf="parent"
        androidMe:topText="@string/page_set_batter_title"
        androidMe:bottomTxt="@string/page_set_batter_info"
        androidMe:splitLine="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>