<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:androidme="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/all_background_color"
             >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:id="@+id/master_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:visibility="invisible"
            >
            <view.find.FindViewItemDress
                android:id="@+id/view_find_dressup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                androidme:leftres="@drawable/viewfind_dressup"
                androidme:rightres="@drawable/right_chacha"
                android:layout_gravity="center_horizontal"
                androidme:text="@string/personality_is_dressed_up"/>
            <view.find.FindViewItem
                android:id="@+id/txt_nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                androidme:leftres="@drawable/img_nfc"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_nfc"/>
            <view.find.FindViewItem
                android:id="@+id/txt_lcdkay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                androidme:leftres="@drawable/img_lcdkey"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="液晶钥匙"
                android:visibility="gone"/>
            <view.find.FindViewItem
                android:id="@+id/txt_tem_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                androidme:leftres="@drawable/img_tem_controler"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_yaokong"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/down_line"/>
            <view.find.FindViewItem
                android:id="@+id/txt_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                androidme:leftres="@drawable/icon_shake"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_yaoyiyao"/>
            <view.find.FindViewItem
                android:id="@+id/txt_nokey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                androidme:leftres="@drawable/icon_nokey"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_blue_in"/>
            <view.find.FindViewItem
                android:id="@+id/txt_touch_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                androidme:leftres="@drawable/icon_touch_in"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_touch_in"/>
            <view.find.FindViewItem
                android:id="@+id/txt_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                androidme:leftres="@drawable/icon_vibration"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_zhendong_alrm"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/down_line"/>
            <view.find.FindViewItem
                android:id="@+id/txt_trust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                androidme:leftres="@drawable/app_driverco"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_app_jieche"/>
            <view.find.FindViewItem
                android:id="@+id/txt_status_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                androidme:leftres="@drawable/img_status_recordd"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_status_record"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/down_line"/>
            <view.find.FindViewItem
                android:id="@+id/txt_project_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                androidme:leftres="@drawable/img_project_sett"
                androidme:rightres="@drawable/right_chacha"
                androidme:text="@string/page_find_factiry"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/down_line"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/fuchezhu_view"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_page_fuchezhu"/>

</RelativeLayout>
